skins.jqdocs.layout: Set layout to fixed for prefixindex table
The table is often too wide and breaks out of the fixed-width
page container:

http://docs.jquery.com/Special:PrefixIndex?prefix=&namespace=0

--- a/www/mediawiki-extensions/JqDocsSkin/modules/skins.jqdocs.layout.css
+++ b/www/mediawiki-extensions/JqDocsSkin/modules/skins.jqdocs.layout.css
@@ -1161,6 +1161,9 @@ p.revision_saved {
 	background-color: #f0f0ff;
 }
 
+#mw-prefixindex-list-table {
+	table-layout: fixed;
+}
 
 /* noarticletext */
 div.noarticletext {
